[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/house.png" type="Texture" id=1]
[ext_resource path="res://Sprites/gold.png" type="Texture" id=2]
[ext_resource path="res://Sprites/stone.png" type="Texture" id=3]
[ext_resource path="res://Sprites/water.png" type="Texture" id=4]
[ext_resource path="res://Sprites/wood.png" type="Texture" id=5]
[ext_resource path="res://Sprites/metal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/food.png" type="Texture" id=7]
[ext_resource path="res://UI/HUDTheme.tres" type="Theme" id=8]
[ext_resource path="res://Sprites/well.png" type="Texture" id=9]
[ext_resource path="res://Sprites/woodchop.png" type="Texture" id=10]
[ext_resource path="res://Sprites/huntingShanty.png" type="Texture" id=11]
[ext_resource path="res://Sprites/fishingboat.png" type="Texture" id=12]
[ext_resource path="res://Sprites/blacksmith.png" type="Texture" id=13]
[ext_resource path="res://Sprites/mine.png" type="Texture" id=14]
[ext_resource path="res://Sprites/shop.png" type="Texture" id=15]
[ext_resource path="res://UI/HUD.gd" type="Script" id=16]
[ext_resource path="res://UI/ButtonPanel.gd" type="Script" id=17]
[ext_resource path="res://UI/MouseCursor.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/InputController.gd" type="Script" id=19]
[ext_resource path="res://UI/ResourcesPanel.gd" type="Script" id=20]
[ext_resource path="res://Game/PlayerResources.gd" type="Script" id=21]
[ext_resource path="res://UI/BuildingRecipes.gd" type="Script" id=22]
[ext_resource path="res://UI/DevPanel.gd" type="Script" id=23]
[ext_resource path="res://UI/PlayerWarning.gd" type="Script" id=24]
[ext_resource path="res://UI/WaterButton.gd" type="Script" id=25]
[ext_resource path="res://UI/FoodButton.gd" type="Script" id=26]
[ext_resource path="res://UI/WoodButton.gd" type="Script" id=27]
[ext_resource path="res://UI/StoneButton.gd" type="Script" id=28]
[ext_resource path="res://UI/MetalButton.gd" type="Script" id=29]
[ext_resource path="res://UI/ShopMode.gd" type="Script" id=30]
[ext_resource path="res://AudioScenes/SFXManager.tscn" type="PackedScene" id=31]
[ext_resource path="res://UI/ButtonPanelButton.gd" type="Script" id=32]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )

[node name="HUD" type="Control"]
theme = ExtResource( 8 )
script = ExtResource( 16 )

[node name="ButtonPanel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 254.0
margin_right = 388.0
margin_bottom = 290.0
rect_min_size = Vector2( 160, 36 )
theme = ExtResource( 8 )
script = ExtResource( 17 )

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 34.0
rect_min_size = Vector2( 142, 0 )
rect_scale = Vector2( 2, 1 )
theme = ExtResource( 8 )
custom_constants/separation = 2

[node name="WellButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_right = 16.0
margin_bottom = 32.0
hint_tooltip = "Well"
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_constants/hseparation = 0
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 32 )

[node name="HunterButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 18.0
margin_right = 34.0
margin_bottom = 32.0
hint_tooltip = "Hunter's Shanty"
theme = ExtResource( 8 )
icon = ExtResource( 11 )
script = ExtResource( 32 )

[node name="FisherButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 36.0
margin_right = 52.0
margin_bottom = 32.0
hint_tooltip = "Fishing Boat"
theme = ExtResource( 8 )
icon = ExtResource( 12 )
script = ExtResource( 32 )

[node name="HouseButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 32.0
hint_tooltip = "House"
theme = ExtResource( 8 )
icon = ExtResource( 1 )
script = ExtResource( 32 )

[node name="WoodchopButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 32.0
hint_tooltip = "Wood Splitter's Pile"
theme = ExtResource( 8 )
icon = ExtResource( 10 )
script = ExtResource( 32 )

[node name="MineButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 90.0
margin_right = 106.0
margin_bottom = 32.0
hint_tooltip = "Mine"
theme = ExtResource( 8 )
icon = ExtResource( 14 )
script = ExtResource( 32 )

[node name="BlacksmithButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 108.0
margin_right = 124.0
margin_bottom = 32.0
hint_tooltip = "Blacksmith"
theme = ExtResource( 8 )
icon = ExtResource( 13 )
script = ExtResource( 32 )

[node name="ShopButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 126.0
margin_right = 142.0
margin_bottom = 32.0
hint_tooltip = "Shop"
theme = ExtResource( 8 )
icon = ExtResource( 15 )
script = ExtResource( 32 )

[node name="ResourcesPanel" type="Panel" parent="."]
margin_right = 48.0
margin_bottom = 88.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 8 )
script = ExtResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcesPanel"]
margin_left = 4.0
margin_top = 3.0
margin_right = 46.0
margin_bottom = 85.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ResourceTextures" type="VBoxContainer" parent="ResourcesPanel/HBoxContainer"]
margin_right = 8.0
margin_bottom = 82.0
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 6

[node name="water" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_right = 8.0
margin_bottom = 8.0
hint_tooltip = "Water"
theme = ExtResource( 8 )
texture = ExtResource( 4 )

[node name="food" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 14.0
margin_right = 8.0
margin_bottom = 22.0
hint_tooltip = "Food"
theme = ExtResource( 8 )
texture = ExtResource( 7 )

[node name="wood" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 28.0
margin_right = 8.0
margin_bottom = 36.0
hint_tooltip = "Wood"
theme = ExtResource( 8 )
texture = ExtResource( 5 )

[node name="stone" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 42.0
margin_right = 8.0
margin_bottom = 50.0
hint_tooltip = "Stone"
theme = ExtResource( 8 )
texture = ExtResource( 3 )

[node name="metal" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 56.0
margin_right = 8.0
margin_bottom = 64.0
hint_tooltip = "Metal"
theme = ExtResource( 8 )
texture = ExtResource( 6 )

[node name="gold" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 70.0
margin_right = 8.0
margin_bottom = 78.0
hint_tooltip = "Gold"
theme = ExtResource( 8 )
texture = ExtResource( 2 )

[node name="AmountLabels" type="VBoxContainer" parent="ResourcesPanel/HBoxContainer"]
margin_left = 12.0
margin_right = 22.0
margin_bottom = 82.0

[node name="WaterLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_right = 10.0
margin_bottom = 10.0
theme = ExtResource( 8 )
text = "0"

[node name="FoodLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 14.0
margin_right = 10.0
margin_bottom = 24.0
theme = ExtResource( 8 )
text = "0"

[node name="WoodLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 28.0
margin_right = 10.0
margin_bottom = 38.0
theme = ExtResource( 8 )
text = "0"

[node name="StoneLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 42.0
margin_right = 10.0
margin_bottom = 52.0
theme = ExtResource( 8 )
text = "0"

[node name="MetalLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 56.0
margin_right = 10.0
margin_bottom = 66.0
theme = ExtResource( 8 )
text = "0"

[node name="GoldLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 70.0
margin_right = 10.0
margin_bottom = 80.0
theme = ExtResource( 8 )
text = "0"

[node name="ShopPanel" type="Panel" parent="."]
visible = false
margin_left = 160.0
margin_top = 100.0
margin_right = 364.0
margin_bottom = 190.0
rect_min_size = Vector2( 204, 90 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 8 )
script = ExtResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ShopPanel"]
margin_left = 4.0
margin_top = 16.0
margin_right = 182.172
margin_bottom = 66.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel/HBoxContainer"]
margin_left = 7.0
margin_right = 27.0
margin_bottom = 50.0

[node name="water" type="TextureRect" parent="ShopPanel/HBoxContainer/VBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Water x10"
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
texture = ExtResource( 4 )
expand = true

[node name="WaterLabel" type="Label" parent="ShopPanel/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "2g"
align = 1

[node name="WaterButton" type="Button" parent="ShopPanel/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
script = ExtResource( 25 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ShopPanel/HBoxContainer"]
margin_left = 47.0
margin_right = 67.0
margin_bottom = 50.0

[node name="food" type="TextureRect" parent="ShopPanel/HBoxContainer/VBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Food x10"
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
texture = ExtResource( 7 )
expand = true

[node name="FoodLabel" type="Label" parent="ShopPanel/HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "4g"
align = 1

[node name="FoodButton" type="Button" parent="ShopPanel/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
script = ExtResource( 26 )

[node name="VBoxContainer3" type="VBoxContainer" parent="ShopPanel/HBoxContainer"]
margin_left = 87.0
margin_right = 107.0
margin_bottom = 50.0

[node name="wood" type="TextureRect" parent="ShopPanel/HBoxContainer/VBoxContainer3"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Wood x10"
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
texture = ExtResource( 5 )
expand = true

[node name="WoodLabel" type="Label" parent="ShopPanel/HBoxContainer/VBoxContainer3"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "6g"
align = 1

[node name="WoodButton" type="Button" parent="ShopPanel/HBoxContainer/VBoxContainer3"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
script = ExtResource( 27 )

[node name="VBoxContainer4" type="VBoxContainer" parent="ShopPanel/HBoxContainer"]
margin_left = 127.0
margin_right = 147.0
margin_bottom = 50.0

[node name="stone" type="TextureRect" parent="ShopPanel/HBoxContainer/VBoxContainer4"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Stone x10"
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
texture = ExtResource( 3 )
expand = true

[node name="StoneLabel" type="Label" parent="ShopPanel/HBoxContainer/VBoxContainer4"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "6g"
align = 1

[node name="StoneButton" type="Button" parent="ShopPanel/HBoxContainer/VBoxContainer4"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
script = ExtResource( 28 )

[node name="VBoxContainer5" type="VBoxContainer" parent="ShopPanel/HBoxContainer"]
margin_left = 167.0
margin_right = 193.0
margin_bottom = 50.0

[node name="metal" type="TextureRect" parent="ShopPanel/HBoxContainer/VBoxContainer5"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Metal x10"
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
texture = ExtResource( 6 )
expand = true

[node name="MetalLabel" type="Label" parent="ShopPanel/HBoxContainer/VBoxContainer5"]
margin_top = 20.0
margin_right = 26.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "12g"
align = 1

[node name="MetalButton2" type="Button" parent="ShopPanel/HBoxContainer/VBoxContainer5"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
script = ExtResource( 29 )

[node name="Panel" type="Panel" parent="ShopPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 202.0
margin_bottom = 13.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="ShopPanel"]
margin_left = 54.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 12.0
text = "Shop"

[node name="ShopMode" type="HBoxContainer" parent="ShopPanel"]
margin_left = 3.0
margin_top = 72.0
margin_right = 121.0
margin_bottom = 88.0
script = ExtResource( 30 )

[node name="Label" type="Label" parent="ShopPanel/ShopMode"]
margin_top = 3.0
margin_right = 46.0
margin_bottom = 13.0
text = "Mode:"

[node name="BuyButton" type="Button" parent="ShopPanel/ShopMode"]
margin_left = 50.0
margin_right = 82.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
toggle_mode = true
pressed = true
text = "Buy"

[node name="SellButton" type="Button" parent="ShopPanel/ShopMode"]
margin_left = 86.0
margin_right = 118.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 8 )
toggle_mode = true
text = "Sell"

[node name="DevPanel" type="Panel" parent="."]
visible = false
margin_left = 329.0
margin_right = 480.0
margin_bottom = 93.0
hint_tooltip = "Toggle me with CTRL + ALT + D"
script = ExtResource( 23 )

[node name="Label" type="Label" parent="DevPanel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 85.0
margin_bottom = 12.0
text = "Dev Panel"

[node name="Resources" type="Label" parent="DevPanel"]
margin_left = 3.0
margin_top = 19.0
margin_right = 93.0
margin_bottom = 29.0
text = "Resources"

[node name="MaxResourcesButton" type="Button" parent="DevPanel"]
margin_left = 40.0
margin_top = 33.0
margin_right = 50.0
margin_bottom = 43.0

[node name="LimitResourcesButton" type="Button" parent="DevPanel"]
margin_left = 65.0
margin_top = 48.0
margin_right = 75.0
margin_bottom = 58.0

[node name="MaxResourceLabel" type="Label" parent="DevPanel"]
margin_left = 3.0
margin_top = 33.0
margin_right = 39.0
margin_bottom = 43.0
text = "Max "

[node name="NormalResourceLabel" type="Label" parent="DevPanel"]
margin_left = 3.0
margin_top = 48.0
margin_right = 61.0
margin_bottom = 58.0
text = "Normal"

[node name="Buildings" type="Label" parent="DevPanel"]
margin_left = 3.0
margin_top = 64.0
margin_right = 93.0
margin_bottom = 74.0
text = "Buildings"

[node name="DestroyAll" type="Label" parent="DevPanel"]
margin_left = 4.0
margin_top = 79.0
margin_right = 62.0
margin_bottom = 89.0
text = "Destroy All"

[node name="DestroyAllButton" type="Button" parent="DevPanel"]
margin_left = 101.0
margin_top = 79.0
margin_right = 111.0
margin_bottom = 89.0

[node name="ResourcesPopup" type="PopupPanel" parent="."]
anchor_right = 0.725
margin_left = 161.0
margin_top = 100.0
margin_right = -29.0
margin_bottom = 118.0
rect_min_size = Vector2( 158, 18 )
size_flags_horizontal = 12
size_flags_vertical = 12
script = ExtResource( 24 )

[node name="Label" type="Label" parent="ResourcesPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 14.0
text = "Not enough resources!"

[node name="Timer" type="Timer" parent="ResourcesPopup"]
wait_time = 0.8
one_shot = true

[node name="PlacementPopup" type="PopupPanel" parent="."]
anchor_right = 0.725
margin_left = 161.0
margin_top = 100.0
margin_right = -29.0
margin_bottom = 118.0
rect_min_size = Vector2( 158, 18 )
size_flags_horizontal = 12
size_flags_vertical = 12
script = ExtResource( 24 )

[node name="Label" type="Label" parent="PlacementPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 14.0
text = "Invalid Placement!"

[node name="Timer" type="Timer" parent="PlacementPopup"]
wait_time = 0.8
one_shot = true

[node name="BuildingRecipes" type="Node" parent="."]
script = ExtResource( 22 )

[node name="InputController" type="Node" parent="."]
script = ExtResource( 19 )

[node name="PlayerResources" type="Node" parent="."]
script = ExtResource( 21 )

[node name="MouseCursor" parent="." instance=ExtResource( 18 )]

[node name="SFXManager" parent="." instance=ExtResource( 31 )]

[connection signal="is_building" from="." to="InputController" method="_on_HUD_is_building"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/WellButton" to="." method="_on_WellButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/HunterButton" to="." method="_on_HunterButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/FisherButton" to="." method="_on_FisherButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/HouseButton" to="." method="_on_HouseButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/WoodchopButton" to="." method="_on_WoodButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/MineButton" to="." method="_on_MineButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/BlacksmithButton" to="." method="_on_BlacksmithButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/ShopButton" to="." method="_on_ShopButton_button_down"]
[connection signal="button_down" from="ShopPanel/HBoxContainer/VBoxContainer/WaterButton" to="ShopPanel" method="_on_WaterButton_button_down"]
[connection signal="button_down" from="ShopPanel/HBoxContainer/VBoxContainer2/FoodButton" to="ShopPanel" method="_on_FoodButton_button_down"]
[connection signal="button_down" from="ShopPanel/HBoxContainer/VBoxContainer3/WoodButton" to="ShopPanel" method="_on_WoodButton_button_down"]
[connection signal="button_down" from="ShopPanel/HBoxContainer/VBoxContainer4/StoneButton" to="ShopPanel" method="_on_StoneButton_button_down"]
[connection signal="button_down" from="ShopPanel/HBoxContainer/VBoxContainer5/MetalButton2" to="ShopPanel" method="_on_MetalButton2_button_down"]
[connection signal="button_down" from="ShopPanel/ShopMode/BuyButton" to="ShopPanel/ShopMode" method="_on_BuyButton_button_down"]
[connection signal="button_down" from="ShopPanel/ShopMode/SellButton" to="ShopPanel/ShopMode" method="_on_SellButton_button_down"]
[connection signal="button_down" from="DevPanel/MaxResourcesButton" to="DevPanel" method="_on_MaxResourcesButton_button_down"]
[connection signal="button_down" from="DevPanel/LimitResourcesButton" to="DevPanel" method="_on_LimitResourcesButton_button_down"]
[connection signal="button_down" from="DevPanel/DestroyAllButton" to="." method="_on_DestroyAllButton_button_down"]
[connection signal="visibility_changed" from="ResourcesPopup" to="." method="_on_ResourcesPopup_visibility_changed"]
[connection signal="timeout" from="ResourcesPopup/Timer" to="ResourcesPopup" method="_on_Timer_timeout"]
[connection signal="visibility_changed" from="PlacementPopup" to="." method="_on_PlacementPopup_visibility_changed"]
[connection signal="timeout" from="PlacementPopup/Timer" to="PlacementPopup" method="_on_Timer_timeout"]
